# gosc-graph-state-generation

./: Makefile  pyproject.toml  setup.cfg
examples/: comb_example.py  linear_example.py
src/graph_state_generation/benchmarks/: benchmark_harness.py
src/graph_state_generation/graph/: graph.py  graph_node.py
src/graph_state_generation/graph_state/: example_graphs.py  graph_node.py  graph_state.py  graph_state_networkx.py
src/graph_state_generation/mappers/: comb_mapper.py  distance_mapper.py  linear_mapper.py  mapper.py  random_mapper.py  weight_sort_mapper.py
src/graph_state_generation/schedulers/: greedy_cz_scheduler.py  greedy_stabiliser_measurement_scheduler.py  scheduler.py
src/graph_state_generation/utility/: time_decorator.py
src/graph_state_generation/visualization_tools/: graph_to_tikz.py  mapper_to_tikz.py
tests/: test_example_graphs.py  test_greedy_cz_scheduler.py  test_greedy_stabiliser_measurement_scheduler.py  test_linear_mapper.py  test_pre_mapping_optimizer.py  test_stabilizer_measurement_scheduler.py  test_weight_mapper.py
