[metadata]
name = graph_state_generation
description = "Graph State Generation"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/sfc-aqua/gosc-graph-state-generation
author = Aqua
author_email = sitong@sfc.wide.ad.jp,
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = ~=3.8

install_requires =
    matplotlib


[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest~=6.2
